--- a/camacari_analysis/landcoverAnalysis.ipynb
+++ b/camacari_analysis/landcoverAnalysis.ipynb
@@ -1959,7 +1959,7 @@
     {
       "cell_type": "code",
       "source": [
-        "ee.Initialize(project="ee-murilloalcosta")"
+        "ee.Initialize(project='ee-murilloalcosta')"
       ],
       "metadata": {
         "colab": {
